2001-06-10  Bruno Haible  <haible@clisp.cons.org>

	* msgfmt.c: Change the --strict option to not apply to domain
	directives, only to the output filename argument.
	(struct msg_domain): Add file_name field.
	(domain_list): Renamed from domain.
	(new_domain): Add file_name argument.
	(main): Pass file name to new_domain(). Use file_name passed to
	new_domain() in fopen call; don't free it.
	(new_domain): New argument 'file_name'.
	(format_directive_domain): Always ensure ".mo" suffix, independently
	of --strict.
	(format_directive_message): Likewise.
	(add_mo_suffix): Don't call xstrdup.

2001-06-01  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.am (datadir): Remove definition.
	Reported by Albert Chin-A-Young <china@thewrittenword.com>.

2001-05-15  Bruno Haible  <haible@clisp.cons.org>

	* msgcmp.c (main): Call set_program_name instead of assigning
	program_name directly.
	* msgcomm.c (main): Likewise.
	* msgfmt.c (main): Likewise.
	* msgmerge.c (main): Likewise.
	* msgunfmt.c (main): Likewise.
	* xgettext.c (main): Likewise.
	* gettext.c (main): Remove "lt-" prefix from program_name.
	* ngettext.c (main): Likewise.

2001-05-04  Bruno Haible  <haible@clisp.cons.org>

	* gettext.c (usage): Add description of what the program does.
	Separate blocks with blank lines.
	* ngettext.c (usage): Likewise.

	* msgcmp.c (usage): Add a blank line after the first usage line.
	Hardwire the blank line output.
	* msgcomm.c (usage): Likewise.
	* msgfmt.c (usage): Likewise.
	* msgmerge.c (usage): Likewise.
	* msgunfmt.c (usage): Likewise.
	* xgettext.c (usage): Likewise.

2001-05-05  Karl Eichwalder  <ke@suse.de>

	* xgettext.c (read_name_from_file): Remove trailing space from line.
	* msgcomm.c (read_name_from_file): Likewise.

2001-05-02  Bruno Haible  <haible@clisp.cons.org>

	* po-charset.c: Don't include stdio.h, stdlib.h, mbswidth.h. Include
	xerror.h instead.
	(multiline_warning): Move to xerror.c.
	(po_lex_charset_set): Use xasprintf instead of asprintf.